[gd_scene load_steps=17 format=3 uid="uid://b5o5v2mi23ph"]

[ext_resource type="Script" path="res://enemies/saucer.gd" id="1_oidx6"]
[ext_resource type="Texture2D" uid="uid://bpolhid5lw03d" path="res://assets/ships/saucer_2.png" id="1_upb3n"]
[ext_resource type="AudioStream" uid="uid://cfy0ticbk7ovy" path="res://assets/sounds/misc/sci-fi-door.wav" id="3_f2ewm"]
[ext_resource type="PackedScene" uid="uid://blddmb063eia0" path="res://health_bar/health_bar.tscn" id="4_re3h2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_utcrj"]
radius = 36.0

[sub_resource type="Animation" id="Animation_pkmex"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitBox/Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox/Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sound:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitBox/Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_3hc58"]
resource_name = "shoot"
length = 2.6
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitBox/Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2, 2.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 5, 4, 3, 2, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sound:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1.2, 2.6),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [true],
"method": &"set_shooting"
}, {
"args": [],
"method": &"shoot"
}, {
"args": [false],
"method": &"set_shooting"
}]
}

[sub_resource type="Animation" id="Animation_wb0tf"]
resource_name = "spin"
length = 6.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitBox/Sprite2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_r8clp"]
resource_name = "death"
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitBox/Sprite2D:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0.0156863, 1, 1), Color(1, 0.0156863, 1, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 1.4),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [false],
"method": &"set_process"
}, {
"args": [],
"method": &"make_booms"
}, {
"args": [],
"method": &"die"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ssva5"]
_data = {
"RESET": SubResource("Animation_pkmex"),
"death": SubResource("Animation_r8clp"),
"shoot": SubResource("Animation_3hc58"),
"spin": SubResource("Animation_wb0tf")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_4u13g"]
animation = &"death"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_6tt4j"]
animation = &"shoot"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_pqw0j"]
animation = &"spin"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_f7tev"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ncy5s"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_cpcul"]
states/death/node = SubResource("AnimationNodeAnimation_4u13g")
states/death/position = Vector2(728, 100)
states/shoot/node = SubResource("AnimationNodeAnimation_6tt4j")
states/shoot/position = Vector2(574, 100)
states/spin/node = SubResource("AnimationNodeAnimation_pqw0j")
states/spin/position = Vector2(376, 100)
transitions = ["Start", "spin", SubResource("AnimationNodeStateMachineTransition_f7tev"), "shoot", "spin", SubResource("AnimationNodeStateMachineTransition_ncy5s")]

[node name="Saucer" type="PathFollow2D"]
rotates = false
script = ExtResource("1_oidx6")

[node name="HitBox" type="Area2D" parent="." groups=["saucer"]]
collision_layer = 2
collision_mask = 5

[node name="Sprite2D" type="Sprite2D" parent="HitBox"]
position = Vector2(2.08165e-12, 2.08165e-12)
texture = ExtResource("1_upb3n")
offset = Vector2(2.08165e-12, 3)
hframes = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_utcrj")

[node name="Booms" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="Booms"]
position = Vector2(-20, 0)

[node name="Marker2D2" type="Marker2D" parent="Booms"]
position = Vector2(21, 0)

[node name="Marker2D3" type="Marker2D" parent="Booms"]
position = Vector2(0, 26)

[node name="Marker2D4" type="Marker2D" parent="Booms"]
position = Vector2(0, -26)

[node name="Marker2D5" type="Marker2D" parent="Booms"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ssva5")
}
autoplay = "spin"

[node name="Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_f2ewm")

[node name="AnimationTree" type="AnimationTree" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ssva5")
}
tree_root = SubResource("AnimationNodeStateMachine_cpcul")
anim_player = NodePath("../AnimationPlayer")

[node name="HealthBar" parent="." instance=ExtResource("4_re3h2")]
offset_left = -30.0
offset_top = -40.0
offset_right = 30.0
offset_bottom = -37.0

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="died" from="HealthBar" to="." method="_on_health_bar_died"]
